MB-25940: Correct memory accounting for failover callback

This partially reverts Ia6a711a36b9b964dcbd5c3cbd2baa5033389c09c
(see http://review.couchbase.org/#/c/82966) where the memory allocated
during the failover callback function was incorrectly changed to be
accounted for by the bucket.

Change-Id: I4f395f7c12da6addd46f2cc1816c3ed2c1101849
Reviewed-on: http://review.couchbase.org/83140
Well-Formed: Build Bot <build@couchbase.com>
Reviewed-by: Dave Rigby <daver@couchbase.com>
Tested-by: Build Bot <build@couchbase.com>